--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="3" />
-    <application android:label="@string/app_name"
-                 android:debuggable="true">
+    <application android:label="@string/app_name">
         <activity android:name=".HelloJni"
                   android:label="@string/app_name">
             <intent-filter>
