--- a/cdep.yml
+++ b/cdep.yml
@@ -1,4 +1,5 @@
-builders: [cmake, cmakeExamples]
+builders: [ndk-build, cmake]
 
 dependencies:
-- compile: .cdep/fullfill/output/layout/cdep-manifest.yml
+- compile: com.github.jomof:boost:1.0.63-rev24
+- compile: com.github.jomof:openssl:1.0.1-e-rev6
