Fix sample to not use OpenSSL

--- a/cdep.yml
+++ b/cdep.yml
@@ -1,4 +1,4 @@
 builders: [ndk-build]
 
 dependencies:
-- compile: com.github.jomof:openssl:1.0.1-e-rev6
+- compile: com.github.jomof:boost:1.0.63-rev24
