--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         ndk {
             abiFilters "x86", "x86_64", "armeabi", "armeabi-v7a"
         }
+        externalNativeBuild {
+            ndkBuild {
+                arguments 'NDK_MODULE_PATH+=../.cdep/modules/ndk-build'
+            }
+        }
     }
 
     externalNativeBuild {
