--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,14 +10,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        
-        ndk {
-            abiFilters "x86", "x86_64", "armeabi", "armeabi-v7a"
-        }
         externalNativeBuild {
             ndkBuild {
                 arguments 'NDK_MODULE_PATH+=../.cdep/modules/ndk-build'
             }
+        }
+        ndk {
+            abiFilters "x86", "armeabi-v7a"
         }
     }
 
